feat: implement relying party endpoints
